tests/code/pages/errors/die.tht

fun main {
    die('Custom Error')
}